<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/repeat_custom_dialog_sunday_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/day_item_selector"
            android:textColor="@color/colorYellow"
            android:textSize="50sp"
            android:text="@string/s_sunday"/>
        <TextView
            android:id="@+id/repeat_custom_dialog_monday_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/day_item_selector"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/m_monday"/>
        <TextView
            android:id="@+id/repeat_custom_dialog_tuesday_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/day_item_selector"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/t_tuesday"/>
        <TextView
            android:id="@+id/repeat_custom_dialog_wednesday_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/day_item_selector"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/w_wednesday"/>
        <TextView
            android:id="@+id/repeat_custom_dialog_thursday_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/day_item_selector"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/t_thursday"/>
        <TextView
            android:id="@+id/repeat_custom_dialog_friday_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/day_item_selector"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/f_friday"/>
        <TextView
            android:id="@+id/repeat_custom_dialog_saturday_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/day_item_selector"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/s_saturday"/>

    </LinearLayout>

</LinearLayout>