<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/repeat_options_dialog_no_repeat_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/repeat_options_dialog_no_repeat_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/no_repeat"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/repeat_options_dialog_repeat_everyday_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/repeat_options_dialog_repeat_everyday_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/repeat_everyday"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
    android:id="@+id/repeat_options_dialog_repeat_every_workday_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <RadioButton
        android:id="@+id/repeat_options_dialog_repeat_every_workday_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/repeat_every_workday"
        android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
    android:id="@+id/repeat_options_dialog_repeat_every_week_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <RadioButton
        android:id="@+id/repeat_options_dialog_repeat_every_week_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/repeat_every_week"
        android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
    android:id="@+id/repeat_options_dialog_repeat_every_month_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <RadioButton
        android:id="@+id/repeat_options_dialog_repeat_every_month_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_every_month"
        android:textColor="#000"
        android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
    android:id="@+id/repeat_options_dialog_repeat_custom_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <RadioButton
        android:id="@+id/repeat_options_dialog_repeat_custom_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/repeat_custom"
        android:textSize="25sp"/>

    </LinearLayout>

</LinearLayout>