<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_Layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/activity_main_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/toolbar_custom"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_main_search_actv_rv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone">

            <AutoCompleteTextView
                android:id="@+id/activity_main_search_actv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/activity_main_actv_lupe"
                android:layout_alignParentStart="true"
                android:hint="@string/insert_text_to_search"
                android:textSize="20sp"
                android:paddingStart="5dp"/>


            <RelativeLayout
                android:id="@+id/activity_main_actv_lupe"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/lupe_actv_selector"
                android:layout_marginEnd="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/lupe"/>

            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/snack_bar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="snack" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/activity_main_calendar_vew_ll"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/activity_main_calendar_vew_layout_tv1"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/sun"
                        android:textSize="11sp"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/activity_main_calendar_vew_layout_tv2"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/mon"
                        android:textSize="11sp"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/activity_main_calendar_vew_layout_tv3"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/tue"
                        android:textSize="11sp"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/activity_main_calendar_vew_layout_tv4"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/wed"
                        android:textSize="11sp"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/activity_main_calendar_vew_layout_tv5"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/thu"
                        android:textSize="11sp"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/activity_main_calendar_vew_layout_tv6"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/fri"
                        android:textSize="11sp"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/activity_main_calendar_vew_layout_tv7"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:text="@string/sat"
                        android:textSize="11sp"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/activity_main_days_recycler_view"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v4.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:scrollbars="vertical">

                        <LinearLayout
                            android:id="@+id/activity_main_linear_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/listTitleTextToDo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:background="@color/colorYellow"
                                android:text="@string/todo"
                                android:textSize="20sp"
                                android:textColor="@color/colorGreen"
                                android:textStyle="bold" />

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/activity_main_recycler_view_todo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:scrollbars="none" />

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/listTitleTextChecked"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:background="@color/colorYellow"
                                android:text="@string/done"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/RecyclerViewChecked"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:scrollbars="none" />
                        </LinearLayout>
                    </android.support.v4.widget.NestedScrollView>

                    <RelativeLayout
                        android:id="@+id/activity_main_calendar_vew_rv"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/calendar_view_selector_circle"
                        android:layout_centerHorizontal="true"
                        android:layout_above="@id/space">
                        <ImageView
                            android:id="@+id/activity_main_change_view_iv"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:src="@mipmap/calendar" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/activity_main_search_btn_rv"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/calendar_view_selector_circle"
                        android:layout_centerHorizontal="true"
                        android:layout_above="@id/activity_main_calendar_vew_rv"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:src="@mipmap/lupe" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/space"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_alignParentBottom="true">
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:visibility="gone"
                android:id="@+id/activity_main_create_account_button"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button_inside_select_folder_view_selector"
                android:text="@string/login" />

        </RelativeLayout>

    </LinearLayout>

    <include layout="@layout/drawer_layout"/>

</android.support.v4.widget.DrawerLayout>
