<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity="com.reminder_keeper.activities.ReminderActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_main_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar_custom"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_note_time_tv"
            android:layout_width="0sp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:focusable="false"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/set_time"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/activity_note_repeat_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/no_repeat"
            android:textSize="15sp"
            android:gravity="center"
            android:maxLines="1"
            android:textStyle="bold|italic"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_note_date_tv"
            android:layout_weight="1"
            android:layout_width="0sp"
            android:layout_height="30dp"
            android:text="@string/set_date"
            android:maxLines="1"
            android:textSize="20sp"
            android:gravity="center"
            android:focusable="false"
            android:textStyle="bold|italic"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_selector"/>
    </LinearLayout>

    <EditText
        android:id="@+id/activity_note_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_below="@id/activity_main_action_bar"
        android:layout_above="@id/buttons_ll"
        android:gravity="start" />

</RelativeLayout>
